npm install --save hammerjs

--- a/project_note.html
+++ b/project_note.html
@@ -80,6 +80,10 @@
 		<p>We can create these files using following command</p>
 		<h3>ng generate module customers --route customers --module app.module</h3>
 	</section>
+	<section>
+		for Material Icon
+		npm install --save hammerjs
+	</section>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
