--- a/institution_angular/src/index.html
+++ b/institution_angular/src/index.html
@@ -9,7 +9,7 @@
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Google fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
+<!--  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />-->
   <!-- Core theme CSS (includes Bootstrap)-->
 <!--  <link href="css/styles.css" rel="stylesheet" />-->
 </head>
